--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,6 +1,3 @@
-// Variables
-@import 'variables';
-
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
@@ -11,48 +8,40 @@ body {
     font-size: 14px;
 }
 
-/* header */
-
-.navbar-static-top {
-    border-color: #e7e7e7;
-    background-color: #fff;
-    box-shadow: 0px 1px 11px 2px rgba(42, 42, 42, 0.1);
-    border-top: 4px solid #00b5ad;
-    border-bottom: 1px solid #e8e8e8;
-    margin-bottom: 40px;
-    margin-top: 0px;
+.content {
+    min-height: calc(100vh - 70px);
+    margin-top: 15px;
 }
+.footer { height: 50px;}
 
-/* Sticky footer styles */
-html {
-    position: relative;
-    min-height: 100%;
-}
 
-body {
-    /* Margin bottom by footer height */
-    margin-bottom: 60px;
-}
 
-.footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    /* Set the fixed height of the footer here */
-    height: 60px;
-    background-color: #000;
+/* order.index */
 
-    .container {
-        padding-right: 15px;
-        padding-left: 15px;
+/* 橙色選項按鈕(大按鈕) */
+.menu-button-big {
+    /*display: inline-block;
+    font-size: 40px;
+    text-align:center;
+    color: white;
+    background: -webkit-linear-gradient(left top, #925101 , #E37D01);*/
+    width: 150px;
+    height: 150px;
+    /*line-height:150px; */
 
-        p {
-            margin: 19px 0;
-            color: #c1c1c1;
+    padding: 8px;
+    background: -webkit-linear-gradient(left top, #925101, #E37D01);
+    border-color: #357ebd;
+    color: #fff;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px; /* future proofing */
+    -khtml-border-radius: 10px; /* for old Konqueror browsers */
+    text-align: center;
+    vertical-align: middle;
+    border: 1px solid transparent;
+    font-weight: 900;
+    border-width: 10px;
 
-            a {
-                color: inherit;
-            }
-        }
-    }
+
 }
